kuber/hw5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi
  template:
    metadata:
      labels:
        app: multi
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool:latest
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: multi
  ports:
    - name: multi
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
