kuber/hw5/nginxdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: test
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
